完成员工服务可以使用

--- a/web-client/src/main/resources/application.yml
+++ b/web-client/src/main/resources/application.yml
@@ -5,3 +5,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8888/eureka/
+
+spring:
+  application:
+    name: client-web
