--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
 
 spring:
   application:
-    name: service-desk
+    name: service-employee
 
   datasource:
     url: jdbc:mysql://localhost:3306/food?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
