订单管理服务实现

--- a/web-client/src/main/resources/application.yml
+++ b/web-client/src/main/resources/application.yml
@@ -9,3 +9,11 @@ eureka:
 spring:
   application:
     name: client-web
+  jackson:
+    date-format: yyyy/MM/dd
+    time-zone: GMT+8
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
