--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -10,6 +10,14 @@ server:
 spring:
   application:
     name: service-zuul
+  jackson:
+    date-format: yyyy/MM/dd
+    time-zone: GMT+8
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 
 #网关配置
 zuul:
@@ -23,6 +31,9 @@ zuul:
     api-c:
       path: /api-menu/** #访问路径
       service-id: service-menu #跳转的路径 目前是跳转到eureka
+    api-d:
+      path: /api-order/** #访问路径
+      service-id: service-order #跳转的路径 目前是跳转到eureka
     api-w:
       path: /api-web/** #访问路径
       service-id: client-web #跳转的路径 目前是跳转到eureka
