--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -37,6 +37,9 @@ zuul:
     api-e:
       path: /api-login/** #访问路径
       service-id: service-login #跳转的路径 目前是跳转到eureka
+    api-f:
+      path: /api-meal/** #访问路径
+      service-id: service-meal #跳转的路径 目前是跳转到eureka
     api-w:
       path: /api-web/** #访问路径
       service-id: client-web #跳转的路径 目前是跳转到eureka
