--- a/desk-service/src/main/resources/application.yml
+++ b/desk-service/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     jackson:
-      date-format: yyyy/MM/dd
+      date-format: yyyy-MM-dd
       time-zone: GMT+8p
 
 mybatis:
