--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -9,15 +9,15 @@ server:
 spring:
   application:
     name: service-employee
+  jackson:
+    date-format: yyyy-MM-dd
+    time-zone: GMT+8
 
   datasource:
     url: jdbc:mysql://localhost:3306/food?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jackson:
-      date-format: yyyy/MM/dd
-      time-zone: GMT+8p
 
 mybatis:
-  mapper-locations: classpath:mapper/*   # mapperÂ·¾¶
+  mapper-locations: classpath:mapper/*   # mapperÂ·ï¿½ï¿½
